<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p.n.countbook.ViewCounterActivity">

    <Button
        android:id="@+id/editStart"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="editCounter"
        android:text="@string/button_edit"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/resetCount" />

    <Button
        android:id="@+id/deleteCounter"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:onClick="deleteCounter"
        android:text="@string/button_delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="299dp" />

    <TextView
        android:id="@+id/DateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/editStart"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/CommentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStart" />

    <TextView
        android:id="@+id/InitialView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetCount"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/CountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/increase"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/NameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/deleteCounter"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/resetCount"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:onClick="resetCounter"
        android:text="@string/button_Refresh"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increase" />

    <Button
        android:id="@+id/increase"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:onClick="upCounter"
        android:text="+"
        app:layout_constraintRight_toLeftOf="@+id/decrease"
        app:layout_constraintTop_toBottomOf="@+id/deleteCounter" />

    <Button
        android:id="@+id/decrease"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:onClick="downCounter"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/increase"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
